style(blog): fixed max-width image bug on mobile devices
Fixed a styling issue that let large images stretch the page width
on mobile devices. Fixed with a single (somewhat simple) CSS tweak!

--- a/src/app/blog/post/post.component.scss
+++ b/src/app/blog/post/post.component.scss
@@ -42,6 +42,10 @@ article {
     }
   }
 
+  img {
+    max-width: 100%;
+  }
+
   a {
     color: #00e;
     text-decoration: none;
